# cancards-ai

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  evals.yml
backend/: .dockerignore  Debugging.py  Dockerfile  containers.json  docker-compose.yml  endpoint.json  pyproject.toml  requirements.txt
backend/app/: config.py  logging_config.py  main.py  models.py
backend/app/clients/: anthropic_client.py  openai_client.py  pinecone_client.py
backend/app/rag/: generate.py  ingest.py  retrieve.py  stream.py
backend/app/routers/: ask.py  cards.py  health.py
backend/data/: cards.json
backend/infrastructure/: apprunner-trust-policy.json
backend/scripts/: ingest.py
backend/tests/: conftest.py
backend/tests/unit/: test_api.py  test_generate.py  test_ingest.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/cards/: page.tsx
frontend/src/app/cards/[id]/: page.tsx
frontend/src/app/compare/: page.tsx
frontend/src/components/cards/: CardGrid.tsx  CreditCardCard.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatInterface.tsx  MessageBubble.tsx  RecommendationCard.tsx  ScenarioButtons.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/hooks/: useChat.ts  useStreamingChat.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
tests/evals/: baseline.json  ground_truth.json  run_evals.py
