[project]
name = "cancards-backend"
version = "0.1.0"
description = "RAG backend for Canadian credit card Q&A"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.99.0",
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "langchain-anthropic>=1.4.3",
    "langchain-openai>=1.2.1",
    "langchain-pinecone>=0.2.13",
    "langsmith[claude-agent-sdk]>=0.8.0",
    "openai>=2.34.0",
    "pinecone>=7.3.0",
    "pinecone-client>=6.0.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.9",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.46.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "datasets>=4.8.5",
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ragas>=0.4.3",
    "ruff>=0.15.12",
]
